Pages GitHub des images de correction

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>
     </div>
     <div id="customAlertNo">
-        <img src="/img/EMbrylex.webp" class="img1" />
+        <img src="./img/embrylex.webp" class="img1" />
         <p>Comment ça, non ? C'était une question rhétorique.</p>
         <button id="closeAlert">Rattrape-toi vite.</button>
     </div>
     <div id="customAlertYes">
-        <img src="/img/EctoLove.png">
+        <img src="./img/ectolove.png">
         <p>Excellent choix, mademoiselle! Je vous aime !❤️</p>
     </div>
 
