--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div id="customAlertYes">
         <img src="./img/ectolove.png">
-        <p>Excellent choix, mademoiselle! Je vous aime !❤️</p>
+        <p>Excellent choix, mademoiselle! Je t'aime !❤️<br>Ton vieu copain.</p>
     </div>
 
     <script>
